# tpm-job-finder-poc

./: .bumpversion.cfg  .coverage  .coverage.Kevins-MacBook-Pro.local.81798.XaUbaQux  .deepsource.toml  .env.example  .gitignore  ADVANCED_ANALYTICS_IMPLEMENTATION.md  ARCHITECTURE_COMPONENTS.csv  AUDIT_SERVICE_IMPLEMENTATION_COMPLETE.md  AUTOMATION_README.md  Advanced Resume Parsing_Scoring Functionality.md  BUSINESS_PROCESS_ARCHITECTURE.md  CHANGELOG.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENT_SYNCHRONIZATION_STATUS.md  ENGINEERING_GUIDELINES.md  FAST_MODE_TEST_ANALYSIS.md  FAST_REFACTORING_STRATEGY.md  FEATURE_FLAGS_STATUS.md  IMPLEMENTATION_SUMMARY.md  MICROSERVICES_TARGET_STRUCTURE.md  MICROSERVICE_MIGRATION_STRATEGY.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  RELEASE.md  SCANNING_TOOLS.md  STUBS_README.md  STUB_CATALOG.md  SYSTEM_ARCHITECTURE_WORKFLOWS.md  StorageServiceTDD_Requirements.md  TDD_COMPONENT_AUDIT_CATALOG.md  TDD_LLM_PROVIDER_100_PERCENT_STATUS.md  TDD_LLM_PROVIDER_FINAL_STATUS.md  TDD_LLM_PROVIDER_STATUS.md  TDD_SCRAPING_SERVICE_STATUS.md  __init__.py  api_keys.json  app.log.2025-09-08  architecture-roadmap.xlsx  (+19 more)
aggregators/: remoteok.py
applied_tracker/: applied_tracker.py
audit-logger/: logger.py
audit_logger/: __init__.py  audit_trail.py  logger.py  test_e2e.py  test_integration.py  test_integration_health.py  test_integration_job_aggregator.py  test_integration_llm_provider.py  test_logger.py
cache/: applied_tracker.py  cache_manager.py
cli/: __main__.py  cli.py  runner.py
config/: __init__.py  config.py  test_config.json
connectors/: lever.py
cross_component_tests/: test_applied_tracker.py  test_audit_logger.py  test_config_manager.py  test_config_manager_integration.py  test_excel_exporter.py  test_health.py  test_import_analysis.py
docs/: AUTOMATION_README.md  CODECOV.md  COMPONENT_README_TEMPLATE.md  Careerjet_Integration_Plan.html  Careerjet_Integration_Plan.md  DOCUMENTATION_INDEX.md  HOLISTIC_DOCUMENTATION_GUIDE.md  IMPORT_MIGRATION_PLAN.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  STUBS_README.md  STUB_CATALOG.md  SYSTEM_ARCHITECTURE_OVERVIEW.md  conf.py  config.rst  index.rst  onboarding.rst
e2e_tests/: README.md  test_advanced_analytics_e2e.py  test_applied_tracker_e2e.py  test_audit_logger_e2e.py  test_config_manager_e2e.py  test_dedupe_cache_e2e.py  test_health_e2e.py
enrichment/: README.md  __init__.py  heuristic_scorer.py  heuristic_scorer_health.py  orchestrator.py  resume_feedback_generator.py  taxonomy_mapper.py
export/: __init__.py  excel_exporter.py
health_monitor/: __init__.py
integration_tests/: README.md  test_connectors_integration.py
job_aggregator/: README.md  health.py
job_normalizer/: Dockerfile  README.md
llm_provider/: Dockerfile  README.md  deepseek_provider.py  gemini_provider.py  ollama_provider.py
models/: application.py  job.py  user.py
output/: results.csv  results.json  results.xlsx
poc/: sweep.py
regression_tests/: README.md  test_advanced_analytics_regression.py  test_applied_tracker_regression.py  test_audit_logger_regression.py  test_config_manager_regression.py  test_connectors_regression.py  test_dedupe_cache_regression.py  test_health_regression.py  test_regression_workflows.py
resume_store/: search.py  store.py
resume_uploader/: storage.py  uploader.py
scrapers/: Dockerfile  README.md  requirements.txt
scraping_service/: base_adapter.py
(+735 files in other folders)
